Update solr/solrj-zookeeper/src/java/org/apache/solr/client/solrj/impl/NodeValueFetcher.java
Co-authored-by: David Smiley <dsmiley@apache.org>